--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     },
     "devDependencies": {
         "eslint": "8.19.0",
-        "eslint-config-next": "12.2.0"
+        "eslint-config-next": "12.2.0",
+        "eslint-plugin-react": "7.30.1",
+        "webpack": "5.73.0",
+        "webpack-cli": "4.10.0"
     }
 }
