--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "prop-types": "15.8.1",
         "react": "18.2.0",
         "react-bootstrap": "2.4.0",
+        "react-bootstrap-icons": "1.8.4",
         "react-dom": "18.2.0"
     },
     "devDependencies": {
