--- a/jsconfig.json
+++ b/jsconfig.json
@@ -11,6 +11,7 @@
             "~/*": ["./src/*"],
             "public/*": ["public*"],
             "@components/*": ["src/components/*"],
+            "@services/*": ["src/services/*"],
             "@pages/*": ["src/pages/*"]
         }
     },
