--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "sqlite3": "5.0.9"
     },
     "devDependencies": {
+        "@testing-library/jest-dom": "5.16.4",
         "@testing-library/react": "13.3.0",
         "eslint": "8.19.0",
         "eslint-config-next": "12.2.0",
