--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "scripts": {
         "dev": "next dev",
+        "test": "jest",
         "build": "next build",
         "start": "next start",
         "lint": "next lint",
@@ -25,6 +26,7 @@
         "eslint": "8.19.0",
         "eslint-config-next": "12.2.0",
         "eslint-plugin-react": "7.30.1",
+        "jest": "28.1.3",
         "webpack": "5.73.0",
         "webpack-cli": "4.10.0"
     }
