--- a/package.json
+++ b/package.json
@@ -21,12 +21,16 @@
         "sqlite3": "5.0.9"
     },
     "devDependencies": {
+        "@babel/core": "7.18.9",
+        "@babel/preset-react": "7.18.6",
         "@testing-library/jest-dom": "5.16.4",
         "@testing-library/react": "13.3.0",
+        "babel-jest": "28.1.3",
         "eslint": "8.19.0",
         "eslint-config-next": "12.2.0",
         "eslint-plugin-react": "7.30.1",
         "jest": "28.1.3",
+        "jest-environment-jsdom": "28.1.3",
         "webpack": "5.73.0",
         "webpack-cli": "4.10.0"
     }
