--- a/jsconfig.json
+++ b/jsconfig.json
@@ -14,6 +14,7 @@
             "@services/*": ["src/services/*"],
             "@clients/*": ["src/clients/*"],
             "@config/*": ["src/config/*"],
+            "@utils/*": ["src/utils/*"],
             "@pages/*": ["src/pages/*"]
         }
     },
