--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     },
     "dependencies": {
         "bootstrap": "5.1.3",
+        "log4js": "6.6.1",
         "next": "12.2.0",
         "prop-types": "15.8.1",
         "react": "18.2.0",
