--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "create-db": "node src/utils/create-db.js"
     },
     "dependencies": {
+        "ag-grid-community": "28.1.1",
         "ag-grid-react": "28.1.1",
         "bootstrap": "5.1.3",
         "log4js": "6.6.1",
